--- a/index.html
+++ b/index.html
@@ -7,23 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="logo">
-        <img />
-    </div>
-    <div class="question-title">
-        <h1>Is it a Palindrome?</h1>
-    </div>
-    <div class="user-input">
-        <p>Enter text to check for a palindrome</p>
-        <form onsubmit="checkForPalindrome(); return false">
-            <input id='text-input' required />
-            <button id="check-btn">Submit</button>
-        </form>
-        <h2 id="result-positive">_____ is a palindrome</h2>
-        <h2 id="result-negative">______ is not a palindrome</h2>
-    </div>
-    <div class="hint"></div>
-    <div id="result"></div>
+    <form id="form">
+        <label>Test field: <input id='userInput' type="text" /></label>
+        <br /><br />
+        <button type="submit">Submit form</button>
+      </form>
+      <p id="log"></p>
 </body>
 <script type="text/javascript" src="./script.js"></script>
 </html>
